--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="./styles.css">
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/css/all.css">
         <!-- =======ICON WEBSITE========= -->
-    <link rel="shortcut icon" href="./assets/img/icon website/icon website.png">
+    <link rel="shortcut icon" href="website.png">
 
         <title>Portfolio mohamed</title>
     </head>
@@ -159,22 +159,22 @@
 
                 <div class="work__container bd-grid">
                     <a href="file:///home/amr/mohamed/project%20work%20wi-fi/Hudson_1_0_0/index.html" target="_blank"  class="work__img">
-                        <img src="assets/img/WORK1.png" alt="">
+                        <img src="WORK1.png" alt="">
                     </a>
                     <a href="file:///home/amr/mohamed/project%20work%20wi-fi/Kairos10/index.html"  target="_blank" class="work__img">
-                        <img src="assets/img/WORK2.png" alt="">
+                        <img src="WORK2.png" alt="">
                     </a>
                     <a href="file:///home/amr/mohamed/project%20work%20wi-fi/luther-1.0.0/index.html" target="_blank"  class="work__img">
-                        <img src="assets/img/WORK3.png" alt="">
+                        <img src="WORK3.png" alt="">
                     </a>
                     <a href="file:///home/amr/mohamed/project%20work%20wi-fi/templatemo_556_catalog_z/index.html" target="_blank"  class="work__img">
-                        <img src="assets/img/WORK4.png" alt="">
+                        <img src="WORK4.png" alt="">
                     </a>
                     <a href="file:///home/amr/mohamed/Personal%20website%20mohamed%203/templatemo_586_scholar/index.html"  target="_blank" class="work__img">
-                        <img src="assets/img/WORK5.png" alt="">
+                        <img src="WORK5.png" alt="">
                     </a>
                     <a href="file:///home/amr/mohamed/project%20work%20wi-fi/templatemo_580_woox_travel/index.html"  target="_blank" class="work__img">
-                        <img src="assets/img/WORK6.png" alt="">
+                        <img src="WORK6.png" alt="">
                     </a>
                 </div>
             </section>
@@ -212,6 +212,6 @@
         <!--======Icon=======-->
         <script src="./fontawesome-free-6.6.0-web/js/all.js"></script>
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
